--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
 <h1>User Profile</h1>
 
 <h3>Name: <%=@user.name%></h3>
-<h3>Role: <%=@user.role%></h3>
+<h3>Role: <%="Admin" if @user.is_admin?%></h3>
